# test-bump-version

./: .bumpver.toml  .pre-commit-config.yaml  pyproject.toml
src/: check_version_bump.sh  wedwed.txt
